# hiredeck

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .env.example  package.json  pyproject.toml
apps/api/hiredeck_api/: __init__.py  config.py  extract.py  main.py  parse.py  schema.py
apps/web/: package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/builder/: page.tsx
apps/web/src/components/: TemplatePicker.tsx
apps/web/src/lib/: store.ts
