[project]
name = "hiredeck-api"
version = "0.1.0"
description = "Hiredeck parsing API — extracts structured resume JSON from PDF/DOCX via Claude."
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Rahul Kumar Singh", email = "rahulcommercial@gmail.com" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.20",
  "pydantic[email]>=2.9",
  "pydantic-settings>=2.6",
  "anthropic>=0.40",
  "pypdf>=5.1",
  "python-docx>=1.1",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7",
  "pytest>=8.3",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
